make initialise vocabs index optional in dev mode and update extractVocabLabelsFromThemes method